@@ -1,0 +1,9 @@
+<gapi-parser-input>
+  <api filename="glade-api.xml">
+    <library name="libglade">
+      <namespace name="Glade">
+        <dir>libglade-2.0.0/glade</dir>
+      </namespace>
+    </library>
+  </api>
+</gapi-parser-input>
